<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateTaskItemFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_task"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/fragment_createItemTask_edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_task_description"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/fragment_createItemTask_edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:minLines="2"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_task_priority"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/fragment_createItemTask_radioGrp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fragment_createItemTask_radioBtnHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/radiobutton_high" />

                <RadioButton
                    android:id="@+id/fragment_createItemTask_radioBtnAvarage"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/radiobutton_average" />

                <RadioButton
                    android:id="@+id/fragment_createItemTask_radioBtnLow"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/radiobutton_low" />
            </RadioGroup>

            <Button
                android:id="@+id/fragment_createItemTask_btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>